--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -11,13 +11,16 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        component: ['api', 'gui', 'keycloak']
+        component: ['api', 'keycloak']
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
             submodules: 'recursive'
-
+      - run: |
+          ls -ls && pwd
+          cp sample.env ./gui/.env
+          npm install --save-dev eslint
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -33,4 +36,4 @@ jobs:
           context: ./${{ matrix.component }}
           file: ./${{ matrix.component }}/Dockerfile
           push: true
-          tags: usdotjpoode/jpo-conflictvisualizer-${{ matrix.component }}:${{ github.ref_name }}-${{ github.sha }}
+          tags: usdotjpoode/jpo-conflictvisualizer-${{ matrix.component }}:${{ github.ref_name }}
