--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           ls -ls && pwd
-          cd /api/jpo-conflictmonitor/
+          cd $GITHUB_WORKSPACE/api/jpo-conflictmonitor/
           ls -la && pwd 
           mvn -e -X clean install
           cd ../jpo-conflictvisualizer-api
