--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        component: ['api', 'keycloak']
+        component: ['api', gui, 'keycloak']
     steps:
       - name: Checkout
         uses: actions/checkout@v4
