--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,10 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
+          cd $GITHUB_WORKSPACE/api
+          rm -rf /jpo-conflictmonitor
+          ls -la && pwd
+          git clone https://github.com/usdot-jpo-ode/jpo-conflictmonitor.git
           cd $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-conflictmonitor/
           mvn -e -X clean install
           cd $GITHUB_WORKSPACE/api/jpo-conflictvisualizer-api
