--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
-          
+
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
@@ -31,19 +31,20 @@ jobs:
 
       - name: Build jpo-ode module
         run: |
-          mvn -f ./jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/pom.xml install -DskipTests
+          ls -la && pwd
+          mvn -f $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/pom.xml install -DskipTests
 
       - name: Build jpo-geojsonconverter module
         run: |
-          mvn -f ./jpo-conflictmonitor/jpo-geojsonconverter/jpo-geojsonconverter/pom.xml clean install -DskipTests
+          mvn -f $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-geojsonconverter/pom.xml clean install -DskipTests
 
       - name: Build jpo-conflictmonitor module
         run: |
-          mvn -f ./jpo-conflictmonitor/jpo-conflictmonitor/pom.xml clean install -DskipTests
+          mvn -f $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-conflictmonitor/pom.xml clean install -DskipTests
 
       - name: Package jpo-conflictvisualizer-api
         run: |
-          mvn -f ./jpo-conflictvisualizer-api/pom.xml clean package -DskipTests
+          mvn -f $GITHUB_WORKSPACE/api/jpo-conflictvisualizer-api/pom.xml clean package -DskipTests
 
       - name: Build and run Sonar analysis for jpo-conflictvisualizer-ap
         env:
