--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,18 +20,33 @@ jobs:
           java-version: "21"
           distribution: "temurin"
           
-      - name: Cache Maven packages
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-m2
-
+      # - name: Cache Maven packages
+      #   uses: actions/cache@v3
+      #   with:
+      #     path: |
+      #       ~/.m2
+      #     key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-m2
+      - name: Copy the required files 
+        run: |
+          cp $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/pom.xml $GITHUB_WORKSPACE/api/jpo-ode/
+          cp $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-common/pom.xml $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-common/
+          cp $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-common/src $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-common/src
+          cp $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-plugins/pom.xml $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-plugins/
+          cp $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-plugins/src $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-plugins/src
+          cp $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-core/pom.xml $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-core/
+          cp $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-core/src $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-core/src/
+          cp $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-svcs/pom.xml $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-svcs/
+          cp $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-svcs/src $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-svcs/src 
+          cp $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-geojsonconverter/pom.xml $GITHUB_WORKSPACE/api/jpo-geojsonconverter/
+          cp $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-geojsonconverter/src $GITHUB_WORKSPACE/api/jpo-geojsonconverter/src
+          cp $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-conflictmonitor/pom.xml $GITHUB_WORKSPACE/api/jpo-conflictmonitor/
+          cp $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-conflictmonitor/src $GITHUB_WORKSPACE/api/jpo-conflictmonitor/src
+          cp $GITHUB_WORKSPACE/api/jpo-conflictvisualizer-api/pom.xml $GITHUB_WORKSPACE/api/jpo-conflictvisualizer-api/
+          cp $GITHUB_WORKSPACE/api/jpo-conflictvisualizer-api/src $GITHUB_WORKSPACE/api/jpo-conflictvisualizer-api/src  
       - name: Build jpo-ode module
         run: |
-          ls -la && pwd
           mvn -f $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/pom.xml install -DskipTests
 
       - name: Build jpo-geojsonconverter module
@@ -50,7 +65,7 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          mvn -f ./jpo-conflictvisualizer-api/pom.xml sonar:sonar \
+          mvn -f $GITHUB_WORKSPACE/api/jpo-conflictvisualizer-api/pom.xml sonar:sonar \
               -Dsonar.projectKey=usdot-jpo-ode_jpo-conflictvisualizer \
               -Dsonar.organization=usdot-jpo-ode \
               -Dsonar.host.url=https://sonarcloud.io \
