--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,21 +30,21 @@ jobs:
       #       ${{ runner.os }}-m2
       - name: Copy the required files 
         run: |
-          cp $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/pom.xml $GITHUB_WORKSPACE/api/jpo-ode/
-          cp $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-common/pom.xml $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-common/
-          cp $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-common/src $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-common/src
-          cp $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-plugins/pom.xml $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-plugins/
-          cp $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-plugins/src $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-plugins/src
-          cp $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-core/pom.xml $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-core/
-          cp $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-core/src $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-core/src/
-          cp $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-svcs/pom.xml $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-svcs/
-          cp $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-svcs/src $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-svcs/src 
-          cp $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-geojsonconverter/pom.xml $GITHUB_WORKSPACE/api/jpo-geojsonconverter/
-          cp $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-geojsonconverter/src $GITHUB_WORKSPACE/api/jpo-geojsonconverter/src
-          cp $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-conflictmonitor/pom.xml $GITHUB_WORKSPACE/api/jpo-conflictmonitor/
-          cp $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-conflictmonitor/src $GITHUB_WORKSPACE/api/jpo-conflictmonitor/src
-          cp $GITHUB_WORKSPACE/api/jpo-conflictvisualizer-api/pom.xml $GITHUB_WORKSPACE/api/jpo-conflictvisualizer-api/
-          cp $GITHUB_WORKSPACE/api/jpo-conflictvisualizer-api/src $GITHUB_WORKSPACE/api/jpo-conflictvisualizer-api/src  
+          cp -r $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/pom.xml $GITHUB_WORKSPACE/api/jpo-ode/
+          cp -r $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-common/pom.xml $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-common/
+          cp -r $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-common/src $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-common/src
+          cp -r $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-plugins/pom.xml $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-plugins/
+          cp -r $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-plugins/src $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-plugins/src
+          cp -r $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-core/pom.xml $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-core/
+          cp -r $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-core/src $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-core/src/
+          cp -r $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-svcs/pom.xml $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-svcs/
+          cp -r $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-svcs/src $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-svcs/src 
+          cp -r $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-geojsonconverter/pom.xml $GITHUB_WORKSPACE/api/jpo-geojsonconverter/
+          cp -r $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-geojsonconverter/src $GITHUB_WORKSPACE/api/jpo-geojsonconverter/src
+          cp -r $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-conflictmonitor/pom.xml $GITHUB_WORKSPACE/api/jpo-conflictmonitor/
+          cp -r $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-conflictmonitor/src $GITHUB_WORKSPACE/api/jpo-conflictmonitor/src
+          cp -r $GITHUB_WORKSPACE/api/jpo-conflictvisualizer-api/pom.xml $GITHUB_WORKSPACE/api/jpo-conflictvisualizer-api/
+          cp -r $GITHUB_WORKSPACE/api/jpo-conflictvisualizer-api/src $GITHUB_WORKSPACE/api/jpo-conflictvisualizer-api/src  
       - name: Build jpo-ode module
         run: |
           mvn -f $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/pom.xml install -DskipTests
