--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,37 +20,6 @@ jobs:
           java-version: "21"
           distribution: "temurin"
           
-      # - name: Cache Maven packages
-      #   uses: actions/cache@v3
-      #   with:
-      #     path: |
-      #       ~/.m2
-      #     key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-m2
-      - name: Copy the required files 
-        run: |
-          mkdir -p $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-common/src
-          mkdir -p $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-plugins/src
-          mkdir -p $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-core/src
-          mkdir -p $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-svcs/src
-          mkdir -p $GITHUB_WORKSPACE/api/jpo-geojsonconverter/src
-          mkdir -p $GITHUB_WORKSPACE/api/jpo-conflictmonitor/src
-          mkdir -p $GITHUB_WORKSPACE/api/jpo-conflictvisualizer-api/src     
-          cp -r $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/pom.xml $GITHUB_WORKSPACE/api/jpo-ode/
-          cp -r $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-common/pom.xml $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-common/
-          cp -r $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-common/src $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-common/
-          cp -r $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-plugins/pom.xml $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-plugins/
-          cp -r $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-plugins/src $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-plugins/
-          cp -r $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-core/pom.xml $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-core/
-          cp -r $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-core/src $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-core/
-          cp -r $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-svcs/pom.xml $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-svcs/
-          cp -r $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/jpo-ode-svcs/src $GITHUB_WORKSPACE/api/jpo-ode/jpo-ode-svcs/
-          cp -r $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-geojsonconverter/pom.xml $GITHUB_WORKSPACE/api/jpo-geojsonconverter/
-          cp -r $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-geojsonconverter/src $GITHUB_WORKSPACE/api/jpo-geojsonconverter/
-          cp -r $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-conflictmonitor/pom.xml $GITHUB_WORKSPACE/api/jpo-conflictmonitor/
-          cp -r $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-conflictmonitor/src $GITHUB_WORKSPACE/api/jpo-conflictmonitor/
-    
       - name: Build jpo-ode module
         run: |
           mvn -f $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/pom.xml install -DskipTests
@@ -59,9 +28,9 @@ jobs:
         run: |
           mvn -f $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-geojsonconverter/pom.xml clean install -DskipTests
 
-      - name: Build jpo-conflictmonitor module
-        run: |
-          mvn -f $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-conflictmonitor/pom.xml clean install -DskipTests
+      # - name: Build jpo-conflictmonitor module
+      #   run: |
+      #     mvn -f $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-conflictmonitor/pom.xml clean install -DskipTests
 
       - name: Package jpo-conflictvisualizer-api
         run: |
