--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container:
+      image: maven:3.8-eclipse-temurin-21-alpine
+      options: --user root
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
