--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,57 +1,34 @@
 name: CI
+
 on: 
   pull_request:
     types: [opened, reopened, synchronize]
   push:
-    branches: [develop, master]
+    branches: [develop, master, feature/gha]
 
 jobs:
-  build:
+  build-and-sonar:
     runs-on: ubuntu-latest
-    container:
-      image: maven:3.8-eclipse-temurin-21-alpine
-      options: --user root
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          submodules: recursive
+          submodules: recursive # Ensure submodules are checked out
 
-      # - name: Set up JDK
-      #   uses: actions/setup-java@v4
-      #   with:
-      #     java-version: "11"
-      #     distribution: "temurin"
-          
-      - name: Build jpo-ode module
-        run: |
-          mvn -f $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-ode/pom.xml install -DskipTests
+      - name: Set up JDK
+        uses: actions/setup-java@v4 # Match the JDK setup from the submodule CI
+        with:
+          java-version: '21'
+          distribution: 'temurin'
 
-      - name: Build jpo-geojsonconverter module
-        run: |
-          mvn -f $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-geojsonconverter/jpo-geojsonconverter/pom.xml clean install -DskipTests
-
-      - name: Build jpo-conflictmonitor module
-        run: |
-          mvn -f $GITHUB_WORKSPACE/api/jpo-conflictmonitor/jpo-conflictmonitor/pom.xml clean install -DskipTests
-
-      - name: Package jpo-conflictvisualizer-api
-        run: |
-          mvn -f $GITHUB_WORKSPACE/api/jpo-conflictvisualizer-api/pom.xml clean package -DskipTests
-
-      - name: Build and run Sonar analysis for jpo-conflictvisualizer-ap
+      - name: Build and Run Sonar Analysis
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          mvn -f $GITHUB_WORKSPACE/api/jpo-conflictvisualizer-api/pom.xml sonar:sonar \
-              -Dsonar.projectKey=usdot-jpo-ode_jpo-conflictvisualizer \
-              -Dsonar.organization=usdot-jpo-ode \
+          mvn -e -X clean install 
+          mvn -e -X clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar \
+              -Dsonar.projectKey=<your_project_key> \
+              -Dsonar.projectName=<your_project_name> \
+              -Dsonar.organization=<your_sonar_organization> \
               -Dsonar.host.url=https://sonarcloud.io \
-              -Dsonar.login=${{ secrets.SONAR_TOKEN }}
-
-      # - name: Build and run Sonar analysis for jpo-conflictvisualizer-api
-      #   env:
-      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      #   run: |
-      #     cd $GITHUB_WORKSPACE/api/jpo-conflictvisualizer-api
-      #     mvn -e -X clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar -Dsonar.projectKey=usdot-jpo-ode_jpo-conflictvisualizer -Dsonar.projectName=jpo-conflictvisualizer -Dsonar.organization=usdot-jpo-ode -Dsonar.host.url=https://sonarcloud.io -Dsonar.branch.name=$GITHUB_REF_NAME
+              -Dsonar.branch.name=$GITHUB_REF_NAME
