--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,7 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
+          cd $GITHUB_WORKSPACE/api/jpo-conflictvisualizer-api
           mvn -e -X clean install 
           mvn -e -X clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar \
               -Dsonar.projectKey=<your_project_key> \
