--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,9 +30,9 @@ jobs:
           cd ../jpo-geojsonconverter
           mvn install -DskipTests
           cd $GITHUB_WORKSPACE/api/jpo-conflictmonitor/test-message-sender
-          mvn -e -X clean install
+          mvn clean install -DskipTests
           cd $GITHUB_WORKSPACE/jpo-conflictmonitor
-          mvn -e -X clean install 
+          mvn clean install -DskipTests
           cd $GITHUB_WORKSPACE/api/jpo-conflictvisualizer-api
           mvn -e -X clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar \
               -Dsonar.projectKey=<your_project_key> \
