--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
           mvn install -DskipTests
           cd $GITHUB_WORKSPACE/api/jpo-conflictmonitor/test-message-sender
           mvn clean install -DskipTests
-          cd $GITHUB_WORKSPACE/api/jpo-conflictmonitor
+          cd ../jpo-conflictmonitor
           mvn clean install -DskipTests
           cd $GITHUB_WORKSPACE/api/jpo-conflictvisualizer-api
           mvn -e -X clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar \
